Improve dragging behavior ## Summary - improve the dragging behavior by using the SVG draggable plugin instead of the normal DOM mouse-events; move the node and its points of reference accordingly to the encapsulated mouse-event's position - fix some UI layout issues - cleanup some SVG creation blocks, so that no unnecessary container element is created

--- a/src/components/Lattice.css
+++ b/src/components/Lattice.css
@@ -1,6 +1,7 @@
 .box {
-    height: 90vh;
+    height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 
 svg {
