--- a/src/components/index.css
+++ b/src/components/index.css
@@ -5,6 +5,7 @@ html, body {
 body {
   margin: 0;
   width: 100%;
+  user-select: none;
 }
 
 :root {
@@ -111,13 +112,6 @@ button:focus-visible {
   background-color: #242424;
 }
 
-.legend {
-  position: absolute;
-  bottom: 1.5em;
-  right: 1.5em;
-  max-width: 30%;
-}
-
 svg text {
   cursor: default;
   -webkit-user-select: none;
@@ -133,4 +127,10 @@ svg line {
 
 svg path {
   z-index: 1;
+}
+
+.position {
+  position: absolute;
+  bottom: 0;
+  color: rgba(255,255,255,0.3);
 }
